@@ -29,11 +29,21 @@ If the `bin` directory of your PMD distribution is on your shell's path, then yo
 * `pmd designer` on Linux/ OSX
 * `pmd.bat designer` on Windows
 
-Alternatively, you can launch the program "from source" with Maven.
-* `$ ./mvnw -Prunning exec:java` will launch the program after compiling it, using the JavaFX distribution of your system
-* `$ ./mvnw -Prunning,with-javafx exec:java` will also add JavaFX dependencies on your classpath.
-You can change the version of those dependencies with eg `-Dopenjfx.version=21.0.2` for OpenJFX 21.
-See the list of available versions [here](https://search.maven.org/artifact/org.openjfx/javafx).
+Alternatively, you can launch the program "from source" with Maven. There are two different ways
+1. If you are running an OpenJDK build *without* JavaFX bundled:  
+  `$ ./mvnw -Prunning exec:java` will launch the Designer after compiling it and add the JavaFX dependencies on
+  the classpath.  
+  Note: JavaFX will be on the classpath and not module path, which might behave a bit differently.  
+  You can change the version of those dependencies with e.g. `-Dopenjfx.version=21.0.9` for OpenJFX 21.
+  See the list of available versions [here](https://search.maven.org/artifact/org.openjfx/javafx).
+
+2. If you are running an OpenJDK build *with* JavaFX bundled (e.g. Azul Zulu, Bellsoft Liberica):  
+  `$ ./mvnw -Prunning exec:java -Dopenjfx.scope=provided` will launch the Designer after compiling it
+  without putting the JavaFX dependencies on the classpath.  
+  Note: JavaFX will be on the module path and several packages need to be opened for reflection.
+  Since everything (Maven, Designer) runs in the same JVM, the opened packages are defined in
+  `.mvn/jvm.config`. Depending on the Java version, you might need additionally
+  `MAVEN_OPTS="--enable-native-access=javafx.graphics --sun-misc-unsafe-memory-access=allow"`.
 
 ### Updating
 
@@ -62,7 +72,7 @@ The `pmd.core.version` property selects the version of pmd-core *and pmd-java*
 that will be included. The built jar can then be found in your `target` directory.
 **Such a jar cannot be used in a PMD distribution** and must be used in a
 standalone fashion, otherwise classpath conflicts may arise.
-You can additionally enable the profile `with-javafx` to include openjfx as well.
+You can additionally add `-Dopenjfx.scope=compile` to include openjfx as well.
 
 You should never run the `install` goal with the `-Dfat-java` property! This
 would install the fat jar in your local repo and may cause dependency conflicts.
